[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Boshy/bullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Other/Misc/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.14902, 0.858824, 0, 1 )
shape = SubResource( 2 )

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
